--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "lib/CRoaring"]
-	path = lib/CRoaring
+	path = third_party/CRoaring
 	url = https://github.com/RoaringBitmap/CRoaring
 	branch = master
