--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "lib/CRoaring"]
-	path = third_party/CRoaring
-	url = https://github.com/RoaringBitmap/CRoaring
-	branch = master
-[submodule "third_party/replxx"]
-	path = third_party/replxx
-	url = https://github.com/AmokHuginnsson/replxx
+[submodule "third_party/log.c"]
+	path = third_party/log.c
+	url = https://github.com/rxi/log.c.git
